--- a/react-component/events/index.html
+++ b/react-component/events/index.html
@@ -9,10 +9,10 @@
   <body>
     <div id="example"></div>
     <script type="text/jsx" src="util.js"></script>
-    <script type="text/jsx;harmony=true" src="focus-events.js"></script>
-    <script type="text/jsx;harmony=true" src="form-events.js"></script>
-    <script type="text/jsx;harmony=true" src="touch-events.js"></script>
-    <script type="text/jsx;harmony=true" src="ui-events.js"></script>
+    <script type="text/jsx" src="focus-events.js"></script>
+    <script type="text/jsx" src="form-events.js"></script>
+    <script type="text/jsx" src="touch-events.js"></script>
+    <script type="text/jsx" src="ui-events.js"></script>
     <script type="text/jsx">
       var mountNode = document.getElementById('example');
 
