--- a/react-demos/tab/index.html
+++ b/react-demos/tab/index.html
@@ -12,6 +12,7 @@
   <script src="../../build/react.js"></script>
   <script src="../../build/JSXTransformer.js"></script>
   <script type="text/jsx" src="main.js"></script>
+  <!--<script type="text/jsx;harmony=true" src="main.es6"></script>-->
 </head>
 
 <body>
